dev/test_programs/INVALID/group1/blankid8.go
package main;

func main(){
	var x []int;
	x = append(x, _);
}

